# comfy-workflow-api

./: .gitignore  README.md  __init__.py  example_client.py  example_ltx2_client.py  example_workflow.json  pyproject.toml  requirements.txt  run_tests.py
.agents/: MEMORIES.md  PROGRESS.md
.github/workflows/: publish.yml
core/: __init__.py  client.py  collector.py  context.py  interceptor.py  types.py
nodes/: __init__.py  receiver.py  send.py  transformer.py
processors/: __init__.py  inputs.py  outputs.py
server/: __init__.py  routes.py  uploads.py
tests/: conftest.py  test_core.py
utils/: __init__.py  files.py  helpers.py  mime.py  validation.py
