[project]
name = "workflow-api"
description = "HTTP API for ComfyUI with webhook-based workflow execution."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["# ComfyUI Workflow API - Dependencies", "# Required", "aiohttp>=3.8.0              # Async HTTP client for webhook delivery", "# Optional - for enhanced validation (uncomment if desired)", "# pydantic>=2.0.0           # Data validation and serialization", "# Development dependencies (install with: pip install -r requirements.txt[dev])", "# pytest>=7.0.0             # Testing framework", "# pytest-asyncio>=0.21.0    # Async test support", "# pytest-cov>=4.0.0         # Coverage reporting", "# Note: The following are typically already available in ComfyUI:", "# - torch                   # Tensor operations", "# - numpy                   # Array operations", "# - Pillow                  # Image processing", "# - av                      # Video encoding (for video output)"]

[project.urls]
Repository = "https://github.com/isala404/comfy-workflow-api"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/isala404/comfy-workflow-api/wiki"
"Bug Tracker" = "https://github.com/isala404/comfy-workflow-api/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "comfy-workflow-api"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

